# simple_spine_reader

./: .clang-format  .gitignore  CMakeLists.txt  README.md  spine_reader_config.json
include/: Logs.h  Utils.h
resources/tx_ui_Thunderclouds/: tx_ui_Thunderclouds.atlas.txt  tx_ui_Thunderclouds.skel
src/: Logs.cpp  Utils.cpp  main.cpp
